[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless==4.8.1.78",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
    "streamlit>=1.48.0",
]
